Small Changes Check!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="WECEPgrd78PtDAy7fEAzrHmH2SWYdYpQtOyNc2Mj2LE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="Assets/4.jpg" type="image/icon type" alt="Harsh Logo" rel="icon">
@@ -79,6 +80,8 @@
                         <li class = " py-2 " >Frontend Web Development <p class=" text-xs ">( only with HTML, Tailwind CSS and Slight
                                 Javascript for now )</p>
                         </li>
+                        <li class = " py-2 " >Data Visualisations <p class=" text-xs ">( Intermediate level - with Matplotlib, Pandas, Numpy and some other technologies )</p>
+                    </li>
                         <li class = " py-2 " >Web Scraping <p class=" text-xs ">( Beginner level - with Scrapy, Beautiful Soup and latest
                                 Chrome Extensions )</p>
                         </li>
@@ -123,7 +126,7 @@
     <section>
         <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Projects</div>
         <div class=" py-16 flex justify-center " > This section is under construction! </div>
-        <div class=" pb-16 mx-10 flex justify-center  " ><span class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl " ><img class= " shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span class=" pt-6 px-4 " ><span class=" flex items-center text-2xl font-bold " >Pocket AI</span><a href="Assets/Pocket AI V-1.apk " download class=" flex justify-center text-blue-700 hover:underline " >Download</a></div>
+        <div class=" pb-16 mx-10 flex justify-center  " ><span class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl " ><img class= " shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span class=" pt-6 px-4 " ><span class=" flex items-center text-2xl font-bold " >Pocket AI</span><a href="Assets/Pocket AI.apk " download class=" flex justify-center text-blue-700 hover:underline " >Download</a></div>
     </section>
 
     <!--Contact-->
