--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="google-site-verification" content="WECEPgrd78PtDAy7fEAzrHmH2SWYdYpQtOyNc2Mj2LE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="Assets/4.jpg" type="image/icon type" alt="Harsh Logo" rel="icon">
-    <link href="Assets/4.jpg" alt="Harsh Logo" rel="apple-touch-icon">
+    <link href="Assets/ico.png" type="image/icon type" alt="Harsh Logo" rel="icon">
+    <link href="Assets/ico.png" alt="Harsh Logo" rel="apple-touch-icon">
     <title>The Incredible Harsh</title>
 </head>
 
 <body oncontextmenu="return false;" class="  select-none ">
-    <!--<div class=" py-2 flex justify-center bg-red-500 text-white md:text-sm text-xs " ><div><span class="flex justify-center" >This page is under construction.</span><span>Some features might not be available at the moment!</span></div></div>-->
+    <div class=" py-2 flex justify-center bg-red-600 text-white md:text-sm text-xs " ><div><span class="flex justify-center" >Don't forget to connect with me on LinkedIn 🤗</span><span></span></div></div>
     <!--Header-->
-    <nav class=" bg-blue-200 rounded-b-3xl shadow-2xl ">
-        <div class=" py-8 px-4 font-bold "><span class=" text-2xl ">Harsh Kumar</span><span></span></div>
+    <nav class=" flex justify-center bg-blue-200 rounded-b-3xl shadow-2xl ">
+        <div class=" py-8 px-4 font-bold "><span class=" text-4xl ">Harsh Kumar <span class=" font-light text-sm " >~ Portfolio</span></span><span></span></div>
     </nav>
     <!--Brand Icon + Title-->
     <section class=" md:px-16 py-16 flex justify-around px-4 "><img
-            class="shadow-2xl shadow-blue rounded-full md:w-32 w-1/5 " src="Assets/4.jpg" alt=" Display Picture "><span
+            class="shadow-2xl shadow-blue rounded-full md:w-32 w-1/5 " src="Assets/4.png" alt=" Display Picture "><span
             class="flex items-center "><span>
                 <div class="  text-2xl md:text-4xl font-bold ">The Incredible<span
                         class=" pl-1 text-blue-700 ">Harsh</span></div>
@@ -47,13 +47,13 @@
         <!--About Text -->
         <div class=" mb-8 md:mb-16 text-2xl md:text-4xl font-bold flex justify-center "><span>Skills</span></div>
         <div class=" text-sm md:text-2xl md:px-10 px-7   ">
-            <div >
+            <div>
                 <div class=" flex justify-center font-bold text-blue-700 text-xl md:text-3xl ">Languages</div>
                 <div>
                     <ul class=" py-4 px-4 list-disc ">
-                        <li class = "py-1" >Hindi (Mother Tongue)</li>
-                        <li class = "py-1" >English</li>
-                        <li class = "py-1" >Bengali (little bit)</li>
+                        <li class="py-1">Hindi (Mother Tongue)</li>
+                        <li class="py-1">English</li>
+                        <li class="py-1">Bengali (little bit)</li>
                     </ul>
                 </div>
             </div>
@@ -62,10 +62,10 @@
                 </div>
                 <div>
                     <ul class=" py-4 px-4 list-disc ">
-                        <li class = "py-1" >Kotlin & XML</li>
-                        <li class = "py-1" >Python</li>
-                        <li class = "py-1" >Javascript (little bit)</li>
-                        <li class = "py-1" >HTML & Advanced Tailwind CSS</li>
+                        <li class="py-1">Kotlin & XML</li>
+                        <li class="py-1">Python</li>
+                        <li class="py-1">Javascript (little bit)</li>
+                        <li class="py-1">HTML & Advanced Tailwind CSS</li>
                     </ul>
                 </div>
             </div>
@@ -74,15 +74,19 @@
                     Skills</div>
                 <div>
                     <ul class=" py-4 px-4 list-disc ">
-                        <li class = " py-2 " >Native Android Development <p class=" text-xs ">( with Kotlin, XML and latest technologies
+                        <li class=" py-2 ">Native Android Development <p class=" text-xs ">( with Kotlin, XML and latest
+                                technologies
                                 like Room, Firebase etc. )</p>
                         </li>
-                        <li class = " py-2 " >Frontend Web Development <p class=" text-xs ">( only with HTML, Tailwind CSS and Slight
+                        <li class=" py-2 ">Frontend Web Development <p class=" text-xs ">( only with HTML, Tailwind CSS
+                                and Slight
                                 Javascript for now )</p>
                         </li>
-                        <li class = " py-2 " >Data Visualisations <p class=" text-xs ">( Intermediate level - with Matplotlib, Pandas, Numpy and some other technologies )</p>
-                    </li>
-                        <li class = " py-2 " >Web Scraping <p class=" text-xs ">( Beginner level - with Scrapy, Beautiful Soup and latest
+                        <li class=" py-2 ">Data Visualisations <p class=" text-xs ">( Intermediate level - with
+                                Matplotlib, Pandas, Numpy and some other technologies )</p>
+                        </li>
+                        <li class=" py-2 ">Web Scraping <p class=" text-xs ">( Beginner level - with Scrapy, Beautiful
+                                Soup and latest
                                 Chrome Extensions )</p>
                         </li>
 
@@ -93,26 +97,39 @@
                 <div class=" flex justify-center font-bold text-blue-700 text-xl md:text-3xl ">Other Skills</div>
                 <div>
                     <ul class=" py-4 px-4 list-disc ">
-                        <li class = " py-2 " >3D Modelling and Animations<p class=" text-xs ">( Intermediate Level ~ using Blender and DaVinci Resolve )</p>
+                        <li class=" py-2 ">3D Modelling and Animations<p class=" text-xs ">( Intermediate Level ~ using
+                                Blender and DaVinci Resolve )</p>
                         </li>
-                        <li class = "py-2" >Video Editing<p class=" text-xs ">( Intermediate Level ~ using DaVinci Resolve )</p>
+                        <li class="py-2">Video Editing<p class=" text-xs ">( Intermediate Level ~ using DaVinci Resolve
+                                )</p>
                         </li>
-                        <li class="py-2" >Graphics Design<p class=" text-xs ">( Beginner level - with GIMP )</p>
+                        <li class="py-2">Graphics Design<p class=" text-xs ">( Beginner level - with GIMP )</p>
                         </li>
 
                     </ul>
                 </div>
             </div>
             <div>
-                <div class=" flex justify-center font-bold text-blue-700 text-xl md:text-3xl ">Tools and Technologies</div>
+                <div class=" flex justify-center font-bold text-blue-700 text-xl md:text-3xl ">Tools and Technologies
+                </div>
                 <div>
                     <ul class=" py-4 px-4 list-disc ">
-                        <li class = " py-2 " >3D Modelling and Animations<p class=" text-xs ">( Intermediate Level ~ using Blender and DaVinci Resolve )</p>
+                        <li class=" py-2 ">Android Studio
                         </li>
-                        <li class = "py-2" >Video Editing<p class=" text-xs ">( Intermediate Level ~ using DaVinci Resolve )</p>
+                        <li class="py-2">GitHub
                         </li>
-                        <li class="py-2" >Graphics Design<p class=" text-xs ">( Beginner level - with GIMP )</p>
+                        <li class="py-2">VS Code, Xcode, Jupyter and Google Colab Notebooks
                         </li>
+                        <li class="py-2">Google Search Console
+                        </li>
+                        <li class="py-2">Google Play Console
+                        </li>
+                        <li class="py-2">DaVinci Resolve
+                        </li>
+                        <li class="py-2">Blender & GIMP
+                        </li>
+
+                        
 
                     </ul>
                 </div>
@@ -124,20 +141,43 @@
 
     <!-- Projects -->
     <section>
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Projects</div>
-        <div class=" py-16 flex justify-center " > This section is under construction! </div>
-        <div class=" pb-16 mx-10 flex justify-center  " ><span class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl " ><img class= " shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span class=" pt-6 px-4 " ><span class=" flex items-center text-2xl font-bold " >Pocket AI</span><a href="Assets/Pocket AI.apk " download class=" flex justify-center text-blue-700 hover:underline " >Download</a></div>
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Projects 😎
+        </div>
+        <div class=" py-16 flex justify-center "> This section is under construction!<br>More apps coming soon! </div>
+        <div class=" pb-16 mx-10 flex justify-center  "><span
+                class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
+                    class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span
+                    class=" pt-6 px-4 "><span class=" flex items-center text-2xl font-bold ">Pocket AI</span><a
+                        href="Assets/Pocket AI.apk " download
+                        class=" flex justify-center text-blue-700 hover:underline ">Link coming soon!</a></div>
+        <div class=" pb-16 mx-10 flex justify-center  "><span
+                class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
+                    class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/dice.jpeg" alt="Bard AI Logo"><span
+                    class=" pt-6 px-4 "><span class=" flex items-center text-2xl font-bold ">Dice Roller</span><a
+                        href="Assets/Pocket AI.apk " download
+                        class=" flex justify-center text-blue-700 hover:underline ">Link coming soon!</a></div>
     </section>
 
     <!--Contact-->
-    <section class="" >
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Contact</div>
-        <div class=" py-16 flex justify-around" ><div><a href="mailto:2022umt1180@mnit.ac.in" ><img class=" w-24 transform hover:scale-125 transition duration-500 shadow-2xl rounded-3xl " src="Assets/gmailLogo.webp" alt="Email Logo" ></a></div><div><a href="https://wa.me/918797780714?text=Hey%20there%2C%20found%20you%20on%20your%20portfolio!"  target="_blank" ><img class=" transform hover:scale-125 transition duration-500 w-24 shadow-2xl rounded-3xl " src="Assets/whatsappLogo.png" alt="Whatsapp Logo" ></a></div></div>
+    <section class="">
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">For Connection 😀</div>
+        <div class=" py-16 flex justify-around">
+            <div><a href="mailto:2022umt1180@mnit.ac.in"><img
+                        class=" transform hover:scale-125 transition duration-500 shadow-2xl w-14 md:w-24 shadow-2xl rounded-2xl md:rounded-3xl "
+                        src="Assets/gmailLogo.webp" alt="Email Logo"></a></div>
+            <div><a href="https://www.linkedin.com/in/harsh-kumar-13496925a" target="_blank"><img
+                        class=" transform hover:scale-125 transition duration-500 w-14 md:w-24 shadow-2xl rounded-xl md:rounded-3xl "
+                        src="Assets/linkedin.png" alt="Whatsapp Logo"></a></div>
+            <div><a href="https://wa.me/918797780714?text=Hey%20there%2C%20found%20you%20on%20your%20portfolio!"
+                    target="_blank"><img
+                        class=" transform hover:scale-125 transition duration-500  shadow-2xl w-14 md:w-24 shadow-2xl rounded-2xl md:rounded-3xl "
+                        src="Assets/whatsappLogo.png" alt="Whatsapp Logo"></a></div>
+        </div>
     </section>
 
     <!--Gallery Nav-->
     <section>
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Gallery</div>
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Himself ✌️</div>
     </section>
     <!--Gallery for small screens -->
     <section class=" py-16  px-4 grid  gap-4 auto-rows-min block md:hidden ">
@@ -155,11 +195,14 @@
         <img class="md:w-1/3  rounded-3xl shadow-2xl col-span-6  " src="Assets/1.jpg" alt="Harsh's Image">
     </section>
     <!--Gallery for large screens -->
-    <section class=" hidden md:block py-16 px-10 " ><img class=" py-16 rounded-3xl shadow-2xl " src="Assets/largeScreen.png" alt=" Image collage of Harsh "></section>
-    
+    <section class=" hidden md:block py-16 px-10 "><img class=" py-16 rounded-3xl shadow-2xl "
+            src="Assets/largeScreen.png" alt=" Image collage of Harsh "></section>
+
     <!--Footer-->
     <section class=" bg-blue-200 rounded-t-3xl shadow-2xl ">
-        <div class=" py-8 md:py-16 px-4 font-bold flex justify-center  "><span class=" text-sm md:text-lg ">All trademarks are properties of their respective owners. 2023 © Harsh Kumar . All rights reserved.</span><span></span></div>
+        <div class=" py-8 md:py-16 px-4 font-bold flex justify-center  "><span class=" text-sm md:text-lg ">All
+                trademarks are properties of their respective owners. 2023 © Harsh Kumar . All rights
+                reserved.</span><span></span></div>
     </section>
 
 </body>
