--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                         src="Assets/gmailLogo.webp" alt="Email Logo"></a></div>
             <div><a href="https://www.linkedin.com/in/harsh-kumar-13496925a" target="_blank"><img
                         class=" transform hover:scale-125 transition duration-500 w-14 md:w-24 shadow-2xl rounded-xl md:rounded-3xl "
-                        src="Assets/linkedin.png" alt="Whatsapp Logo"></a></div>
-            <div><a href="https://wa.me/918797780714?text=Hey%20there%2C%20found%20you%20on%20your%20portfolio!"
+                        src="Assets/linkedin.png" alt="Linkedin Logo"></a></div>
+            <div><a href="https://github.com/Harsh-apk"
                     target="_blank"><img
-                        class=" transform hover:scale-125 transition duration-500  shadow-2xl w-14 md:w-24 shadow-2xl rounded-2xl md:rounded-3xl "
-                        src="Assets/whatsappLogo.png" alt="Whatsapp Logo"></a></div>
+                        class=" transform hover:scale-125 transition duration-500  shadow-2xl w-14 md:w-24 shadow-2xl rounded-full "
+                        src="Assets/github-mark.png" alt="GitHub Logo"></a></div>
         </div>
     </section>
 
