--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pocket AI</title>
 </head>
@@ -24,7 +24,7 @@
         <div>
             <div class=" mx-10 flex justify-center  "><span
                     class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
-                        class=" shadow w-24 rounded-3xl shadow-2xl " src="/Assets/bardLogo.png" alt="Bard AI Logo"><span
+                        class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span
                         class=" pt-6 px-4 "><span class=" flex items-center text-2xl font-bold ">Pocket AI</span></div>
         </div>
     </section>
