--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <!--Why Pocket AI-->
-        <div class=" py-16 ">
+        <div id="WhyPocketAI" class=" py-16 ">
             <div class=" py-8 bg-gray-100 rounded-3xl px-8 shadow-2xl ">
                 <div class=" text-2xl font-bold flex justify-center ">
                     Why Pocket AI?
