--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -41,6 +41,11 @@
                     to open multiple tabs or applications to get the information you need.</div>
             </div>
         </div>
+        <!--Banner - Feature Graphic-->
+        <span class="  flex justify-center mt-16 rounded-3xl " >
+            <img class="rounded-3xl shadow-2xl " src="Assets/FeatureGraphics.png" alt="Pocket AI">
+        </span>
+
         <!--Why Pocket AI-->
         <div id="WhyPocketAI" class=" py-16 ">
             <div class=" py-8 bg-gray-100 rounded-3xl px-8  shadow-2xl ">
@@ -59,6 +64,12 @@
                 </div>
             </div>
         </div>
+        <!--Screenshots-->
+        <span class="  flex justify-center rounded-3xl " >
+            <span class="px-1" ><img class=" w-64  rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 0.png" alt="Pocket AI"></span>
+            <span class="px-1" ><img class=" w-64  rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 1.png" alt="Pocket AI"></span>
+        </span>
+
         <!--Features-->
         <div class=" py-16 ">
             <div class=" py-8 bg-gray-100 rounded-3xl px-8 shadow-2xl ">
@@ -86,6 +97,15 @@
                 </div>
             </div>
         </div>
+        
+        <!--Screenshots-->
+        <span class="  flex justify-center rounded-3xl " >
+            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 2.png" alt="Pocket AI"></span>
+            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 3.png" alt="Pocket AI"></span>
+            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 4.png" alt="Pocket AI"></span>
+        </span>
+
+
         <!--Privacy Policy-->
         <section id="PrivacyPolicy"  >
             <div class=" py-16 ">
