--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -29,7 +29,7 @@
         </div>
     </section>
     <!--About App-->
-    <section class="  px-8 pb-16 ">
+    <section class=" px-4 md:px-8 pb-16 ">
         <div class=" flex justify-center ">
             <div class=" py-8 bg-gray-100 rounded-3xl px-8 shadow-2xl ">
                 <div class=" text-2xl font-bold flex justify-center ">
@@ -66,8 +66,8 @@
         </div>
         <!--Screenshots-->
         <span class="  flex justify-center rounded-3xl " >
-            <span class="px-1" ><img class=" w-64  rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 0.png" alt="Pocket AI"></span>
-            <span class="px-1" ><img class=" w-64  rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 1.png" alt="Pocket AI"></span>
+            <span class="px-1" ><img class=" w-64 rounded-2xl md:rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 0.png" alt="Pocket AI"></span>
+            <span class="px-1" ><img class=" w-64 rounded-2xl md:rounded-3xl shadow-2xl " src="Assets/Hotpot Design/Hotpot 1.png" alt="Pocket AI"></span>
         </span>
 
         <!--Features-->
@@ -100,9 +100,9 @@
         
         <!--Screenshots-->
         <span class="  flex justify-center rounded-3xl " >
-            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 2.png" alt="Pocket AI"></span>
-            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 3.png" alt="Pocket AI"></span>
-            <span class="px-8 " ><img class=" w-64  rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 4.png" alt="Pocket AI"></span>
+            <span class="px-1 md:px-8 " ><img class=" w-64 rounded-2xl  md:rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 2.png" alt="Pocket AI"></span>
+            <span class="px-1 md:px-8 " ><img class=" w-64 rounded-2xl  md:rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 3.png" alt="Pocket AI"></span>
+            <span class="px-1 md:px-8 " ><img class=" w-64 rounded-2xl  md:rounded-3xl  shadow-2xl  " src="Assets/Hotpot Design/Hotpot 4.png" alt="Pocket AI"></span>
         </span>
 
 
