Some small changes

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- Projects -->
     <section>
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Projects 😎
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Projects
         </div>
         <div class=" py-16 flex justify-center "> This section is under construction!<br>More apps coming soon! </div>
         <div class=" pb-16 mx-10 flex justify-center  "><span
@@ -160,7 +160,7 @@
 
     <!--Contact-->
     <section class="">
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">For Connection 😀</div>
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">For Connection</div>
         <div class=" py-16 flex justify-around">
             <div><a href="mailto:2022umt1180@mnit.ac.in"><img
                         class=" transform hover:scale-125 transition duration-500 shadow-2xl w-14 md:w-24 shadow-2xl rounded-2xl md:rounded-3xl "
@@ -177,7 +177,7 @@
 
     <!--Gallery Nav-->
     <section>
-        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Himself ✌️</div>
+        <div class=" flex justify-center bg-blue-200 rounded-3xl shadow-2xl py-4 px-4 font-bold text-4xl ">Gallery</div>
     </section>
     <!--Gallery for small screens -->
     <section class=" py-16  px-4 grid  gap-4 auto-rows-min block md:hidden ">
