--- a/index.html
+++ b/index.html
@@ -145,11 +145,13 @@
         </div>
         <div class=" py-16 flex justify-center "> This section is under construction!<br>More apps coming soon! </div>
         <div class=" pb-16 mx-10 flex justify-center  "><span
-                class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
-                    class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span
-                    class=" pt-6 px-4 "><span class=" flex items-center text-2xl font-bold ">Pocket AI</span><a
-                        href="Assets/Pocket AI.apk " download
-                        class=" flex justify-center text-blue-700 hover:underline ">Link coming soon!</a></div>
+                class=" py-4 px-4 rounded-3xl shadow-2xl "><span class="flex justify-center" ><img
+                    class="  shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"></span><span
+                    class=" pt-6 px-4 "><span class=" flex items-center justify-center text-2xl font-bold ">Pocket AI</span><span class=" flex justify-around  " ><span class=" transform hover:scale-110 transition duration-500 px-2 my-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-3xl mx-1 " ><a
+                        href="https://play.google.com/store/apps/details?id=com.harsh_kumar.pocketai" target="_blank"
+                        class=" flex justify-center text-white hover:underline  ">Playstore</a></span><span class=" transform hover:scale-110 transition duration-500 px-2 my-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-3xl mx-1 " ><a
+                        href="https://harsh-apk1.github.io/Portfolio/Others/Pocket%20AI/PocketAI.html" target="_blank"
+                        class=" flex justify-center text-white hover:underline  ">Website</a></span></span></span></span></div>
         <div class=" pb-16 mx-10 flex justify-center  "><span
                 class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
                     class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/dice.jpeg" alt="Bard AI Logo"><span
