--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="Assets/bardLogo.png" type="image/icon type" alt="Harsh Logo" rel="icon">
+    <link href="Assets/bardLogo.png" alt="Harsh Logo" rel="apple-touch-icon">
+
     <title>Pocket AI</title>
 </head>
 
 <body oncontextmenu="return false;" class=" bg-white  select-none ">
     <!-- Header Notifications-->
-    <div class=" py-2 flex justify-center bg-green-600 text-white md:text-sm text-xs ">Download now on Playstore 🎉
-    </div>
+    <a href=" https://play.google.com/store/apps/details?id=com.harsh_kumar.pocketai " target="_blank" ><div class=" py-2 flex justify-center bg-green-600 text-white md:text-sm text-xs ">Download now on Playstore 🎉
+    </div></a>
     <!--Header-->
     <section class=" bg-purple-700  shadow-2xl rounded-b-3xl ">
         <div class=" text-2xl md:text-4xl flex justify-center py-4 px-4 font-bold text-white ">
@@ -20,13 +23,21 @@
         </div>
     </section>
      <!--App Card-->
-     <section class=" py-16  ">
-        <div>
+     <section class=" pt-16  ">
+        <!--<div>
             <div class=" mx-10 flex justify-center  "><span
                     class=" flex justify-around  py-4 px-4 rounded-3xl shadow-2xl "><img
                         class=" shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"><span
                         class=" pt-6 px-4 "><span class=" flex items-center text-2xl font-bold ">Pocket AI</span></div>
-        </div>
+        </div>-->
+        <div class=" pb-16 mx-10 flex justify-center  "><span
+            class=" py-4 px-4 rounded-3xl shadow-2xl "><span class="flex justify-center" ><img
+                class="  shadow w-24 rounded-3xl shadow-2xl " src="Assets/bardLogo.png" alt="Bard AI Logo"></span><span
+                class=" pt-6 px-4 "><span class=" flex items-center justify-center text-2xl font-bold ">Pocket AI</span><span class=" flex justify-around  " ><span class=" transform hover:scale-110 transition duration-500 px-2 my-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-3xl mx-1 " ><a
+                    href="https://play.google.com/store/apps/details?id=com.harsh_kumar.pocketai" target="_blank"
+                    class=" flex justify-center text-white hover:underline  ">Playstore</a></span><span class=" transform hover:scale-110 transition duration-500 px-2 my-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-3xl mx-1 " ><a
+                    href="https://harsh-apk1.github.io/Portfolio/Others/Pocket%20AI/PocketAI.html" target="_blank"
+                    class=" flex justify-center text-white hover:underline  ">Website</a></span></span></span></span></div>
     </section>
     <!--About App-->
     <section class=" px-4 md:px-8 pb-16 ">
