Minor issue solved

--- a/Others/Pocket AI/PocketAI.html
+++ b/Others/Pocket AI/PocketAI.html
@@ -37,7 +37,7 @@
                     href="https://play.google.com/store/apps/details?id=com.harsh_kumar.pocketai" target="_blank"
                     class=" flex justify-center text-white hover:underline  ">Playstore</a></span><span class=" transform hover:scale-110 transition duration-500 px-2 my-2 py-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-3xl mx-1 " ><a
                     href="https://harsh-apk1.github.io/Portfolio/Others/Pocket%20AI/PocketAI.html" target="_blank"
-                    class=" flex justify-center text-white hover:underline  ">Website</a></span></span></span></span></div>
+                    class=" flex justify-center text-white hover:underline  ">Developer</a></span></span></span></span></div>
     </section>
     <!--About App-->
     <section class=" px-4 md:px-8 pb-16 ">
