--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content=" Harsh Kumar is a determined tech enthusiast pursuing studies in Metallurgy and Materials Engineering at Malviya National Institute of Technology, Jaipur. Explore his diverse skills in native Android development, frontend web development, data visualizations, web scraping, 3D modeling, video editing, and more.">
+    <meta name="title" content=" The Incredible Harsh - Portfolio | Native Android & Frontend Web Developer">
+    <meta name="keywords" content="Harsh Kumar, Portfolio, Native Android Developer, Frontend Web Developer, Metallurgy and Materials Engineering, Malviya National Institute of Technology, Jaipur, Kotlin, XML, Python, JavaScript, HTML, Tailwind CSS, Room, Firebase, Data Visualizations, Web Scraping, 3D Modeling, Video Editing">
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="The Incredible Harsh">
+    <meta property="og:description" content="Harsh Kumar is a determined tech enthusiast pursuing studies in Metallurgy and Materials Engineering at Malviya National Institute of Technology, Jaipur. Explore his diverse skills in native Android development, frontend web development, data visualizations, web scraping, 3D modeling, video editing, and more.">
+    <meta property="og:image" content="https://harsh-apk1.github.io/Portfolio/Assets/4.png">
+    <meta property="og:url" content="https://harsh-apk1.github.io/Portfolio/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="The Incredible Harsh">
+    <meta name="twitter:description" content="Harsh Kumar is a determined tech enthusiast pursuing studies in Metallurgy and Materials Engineering at Malviya National Institute of Technology, Jaipur. Explore his diverse skills in native Android development, frontend web development, data visualizations, web scraping, 3D modeling, video editing, and more.">
+    <meta name="twitter:image" content="https://harsh-apk1.github.io/Portfolio/Assets/4.png">
+
+
+
     <meta name="google-site-verification" content="WECEPgrd78PtDAy7fEAzrHmH2SWYdYpQtOyNc2Mj2LE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
