--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta name="google-site-verification" content="WECEPgrd78PtDAy7fEAzrHmH2SWYdYpQtOyNc2Mj2LE" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="Assets/ico.png" type="image/icon type" alt="Harsh Logo" rel="icon">
-    <link href="Assets/ico.png" alt="Harsh Logo" rel="apple-touch-icon">
+    <link href="Assets/ico.png" alt="Harsh Logo" rel="apple-touch-icon" sizes="100x100" >
+    <link href="Assets/ico32.png" alt="Harsh Logo" rel="apple-touch-icon" sizes="32x32" >
     <title>The Incredible Harsh</title>
 </head>
 
